refines issue7 cover spacing

--- a/styles/Issue7.module.css
+++ b/styles/Issue7.module.css
@@ -117,7 +117,7 @@
 }
 
 .pageTitleTwo {
-  margin-top:45vh;
+  margin-top:40vh;
   animation: fadeOut ease-out 3.9s infinite alternate 3.9s;
 }
 
@@ -161,7 +161,7 @@
   row-gap: 3vw;
   justify-content: space-between;
   align-items: flex-end;
-  height:22vh;
+  height:24vh;
 }
 
 .siteShortcuts > .linkButton {
